SupportModel/src/objects/ResourceLoading__c.object
<CustomObject>
    <fields>
        <fullName>Base_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Offshore - INDIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>End_Date__c  -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endmonth__c</fullName>
        <formula>MONTH( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endmonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endyear__c</fullName>
        <formula>YEAR( End_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endyear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Jan__c</fullName>
        <label>FTE Jan</label>
        <summarizedField>Year__c.Jan__c</summarizedField>
        <summaryFilterItems>
            <field>Year__c.Year__c</field>
            <operation>equals</operation>
            <value>Year1</value>
        </summaryFilterItems>
        <summaryForeignKey>Year__c.ResourceLoadingId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <formula>VALUE(TEXT( Loading__c ))/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCM_Level__c</fullName>
        <label>GCM Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loading__c</fullName>
        <label>Loading%</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ModStartDate__c</fullName>
        <formula>Model__r.Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ModStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>ResourceLoadings</relationshipLabel>
        <relationshipName>ResourceLoadings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Hr__c</fullName>
        <label>Rate/Hr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Project Management</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Lead (Salesforce, Force.com, Integration)</fullName>
                </value>
                <value>
                    <fullName>Salesforce Consultant/ Sr Architect</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Lead (Salesforce, Force.com, Integration, Data Migration)</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Analyst (Salesforce, Force.com, Integration, Data Migration)</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Analyst (Salesforce, Force.com, Integration, Data Migration) - On Call</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Analyst (Salesforce, Force.com, Integration, Data Migration)- Off hours</fullName>
                </value>
                <value>
                    <fullName>Salesforce Support Analyst (Salesforce, Force.com, Integration, Data Migration) - Weekends</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartMonthDiff__c</fullName>
        <formula>(
         
              (
                  (YEAR(Start_Date__c ) - YEAR( Model__r.Contract_Start_Date__c  ) - 1 ) *12)
             + 
              ((12 - MONTH(Model__r.Contract_Start_Date__c )) +1)  
                 
             + 
                 MONTH(Start_Date__c )
               )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartMonthDiff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startmonth__c</fullName>
        <formula>MONTH( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Startmonth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Startyear__c</fullName>
        <formula>YEAR( Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Startyear</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalContractMonths__c</fullName>
        <formula>(
         
              (
                  (YEAR(End_Date__c ) - YEAR( Model__r.Contract_Start_Date__c  ) - 1 ) *12)
             + 
              ((12 - MONTH(Model__r.Contract_Start_Date__c )) +1)  
                 
             + 
                 MONTH(End_Date__c )
               )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalContractMonths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fee__c</fullName>
        <formula>Rate_Hr__c  *  Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Totalmonths__c</fullName>
        <formula>(
         
              (
                  (YEAR(End_Date__c ) - YEAR(Start_Date__c ) - 1 ) *12)
             + 
              ((12 - MONTH(Start_Date__c )) +1)  
                 
             + 
                 MONTH(End_Date__c )
               )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totalmonths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ResourceLoading</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Days__c</columns>
        <columns>GCM_Level__c</columns>
        <columns>Loading__c</columns>
        <columns>Base_Location__c</columns>
        <columns>Model__c</columns>
        <columns>Rate_Hr__c</columns>
        <columns>Role__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Totalmonths__c</columns>
        <columns>Total_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ResourceLoadings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Start_Date_of_Resource</fullName>
        <active>false</active>
        <errorConditionFormula>Start_Date__c  &lt;  Model__r.Contract_Start_Date__c</errorConditionFormula>
        <errorMessage>Resource Start Date can not be before Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>